# Table2Latex

./: .buildinfo  .gitignore  genindex.html  index.html  objects.inv  search.html  searchindex.js  setup.cfg
.doctrees/: environment.pickle  index.doctree
src/: __init__.py
