[metadata]
name = Table2Latex
version = 0.0.3
author = Tesla2000
author_email = fratajczak124@gmail.com
description = Converts tables to LaTeX format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tesla2000/Table2Latex
project_urls =
    Homepage = https://github.com/Tesla2000/Table2Latex
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5
install_requires =

[options.packages.find]
where = src
